# GengYouFutures

./: .gitignore  Build_target.bat  killer.bat  pullOriginBuild.bat  setup_env.bat
CppCLITester/: CppCLITester.sln
CppCLITester/CppCLITester/: CppCLITester.filters  CppCLITester.vcxproj  FutureOrderControl.cpp  FutureOrderControl.h  MyForm.cpp  MyForm.h  OptionOrderControl.cpp  OptionOrderControl.h  SKOSQuote.cpp  SKOSQuote.h  SKOrder.cpp  SKOrder.h  SKQuote.cpp  SKQuote.h  SKReply.cpp  SKReply.h  StockOrderControl.cpp  StockOrderControl.h
CppTester/: CMakeLists.txt  CppTester.sln  config.h.in
CppTester/CppTester/: CppTester.vcxproj  CppTester.vcxproj.filters  SKCOM_reference.h  SKCenterLib.cpp  SKCenterLib.h  SKOSQuoteLib.cpp  SKOSQuoteLib.h  SKOrderLib.cpp  SKOrderLib.h  SKQuoteLib.cpp  SKQuoteLib.h  SKReplyLib.cpp  SKReplyLib.h  Strategy.cpp  Strategy.h  TEventHandler.h  database.yaml  main.cpp
CppTester/cmdCaptureServer/: socketServer.cpp  socketServer.h
ExcelSample/: ExcelSample.xls
GengTraderGuardian/: Build_target.bat  CMakeLists.txt  GengTraderGuardian.bat  GengTraderGuardian.c  GengTraderGuardian.cpp  StrategyLog.bat  ViewDebugLog.bat  killer.bat
Logger/: Logger.cpp  Logger.h
SKCOMTester/: ForeignStockOrderControl.Designer.cs  ForeignStockOrderControl.cs  Form1.Designer.cs  Form1.cs  FutureOrderControl.Designer.cs  FutureOrderControl.cs  FutureStopLossControl.Designer.cs  FutureStopLossControl.cs  OptionOrderControl.Designer.cs  OptionOrderControl.cs  OverseaFutureOrderControl.Designer.cs  OverseaFutureOrderControl.cs  OverseaOptionOrderControl.Designer.cs  OverseaOptionOrderControl.cs  OverseaStrategyControl.Designer.cs  OverseaStrategyControl.cs  ProxyControl.Designer.cs  ProxyControl.cs  SKCOMTester.csproj  SKCOMTester.sln  SKOOQuote.Designer.cs  SKOOQuote.cs  SKOSQuote.Designer.cs  SKOSQuote.cs  SKOrder.Designer.cs  SKOrder.cs  SKQuote.Designer.cs  SKQuote.cs  SKReply.Designer.cs  SKReply.cs  StockOrderControl.Designer.cs  StockOrderControl.cs  StockStrategyOrderControl.Designer.cs  StockStrategyOrderControl.cs  TFTOMIT.Designer.cs  TFTOMIT.cs  ViewDataGrid_FutureR.Designer.cs  ViewDataGrid_FutureR.cs  WithDrawInOutControl.Designer.cs
SKCOMTesterV2/: SKCOMTesterV2.sln  vssver2.scc
SKCOMTesterV2/WindowsFormsApp1/: MainForm.Designer.cs  MainForm.cs  ReplyForm.Designer.cs  ReplyForm.cs  ReplyForm.resx  csapiTester.csproj  mssccprj.scc  vssver2.scc
SKCOMTesterV2/WindowsFormsApp1/Order/ReadOrderForm/: OFReadOrderForm.Designer.cs  OFReadOrderForm.cs  TFReadOrderForm.Designer.cs  TFReadOrderForm.cs  TSReadOrderForm.Designer.cs  TSReadOrderForm.cs  vssver2.scc
SKCOMTesterV2/WindowsFormsApp1/Order/SKProxyOrder/SKProxySendOrderForm/: OFSKProxySendOrderForm.Designer.cs  OFSKProxySendOrderForm.cs  OSSKProxySendOrderForm.Designer.cs  OSSKProxySendOrderForm.cs  TFSKProxySendOrderForm.Designer.cs  TFSKProxySendOrderForm.cs  TSSKProxySendOrderForm.Designer.cs  TSSKProxySendOrderForm.cs  vssver2.scc
SKCOMTesterV2/WindowsFormsApp1/Order/SKProxyOrder/SKProxyUpdateOrderForm/: OFSKProxyUpdateOrderForm.Designer.cs  OFSKProxyUpdateOrderForm.cs  OSSKProxyUpdateOrderForm.Designer.cs  OSSKProxyUpdateOrderForm.cs  TFSKProxyUpdateOrderForm.Designer.cs  TFSKProxyUpdateOrderForm.cs  TSSKProxyUpdateOrderForm.Designer.cs  TSSKProxyUpdateOrderForm.cs  vssver2.scc
SKCOMTesterV2/WindowsFormsApp1/Order/SendOrderForm/: OFSendOrderForm.Designer.cs  OFSendOrderForm.cs  OSSendOrderForm .Designer.cs  OSSendOrderForm .cs  TFSendOrderForm.Designer.cs  TFSendOrderForm.cs  TSSendOrderForm.Designer.cs  TSSendOrderForm.cs  vssver2.scc
SKCOMTesterV2/WindowsFormsApp1/Order/StrategyOrderForm/: OFStrategyOrderForm.Designer.cs  OFStrategyOrderForm.cs  TFStrategyOrderForm.Designer.cs  TFStrategyOrderForm.cs  TFStrategyOrderForm.resx  TSStrategyOrderForm.Designer.cs  TSStrategyOrderForm.cs  vssver2.scc
SKCOMTesterV2/WindowsFormsApp1/Order/UpdateOrderForm/: OFUpdateOrderForm.Designer.cs  OFUpdateOrderForm.cs  OSUpdateOrderForm.Designer.cs  OSUpdateOrderForm.cs  TSTFUpdateOrderForm.Designer.cs  TSTFUpdateOrderForm.cs  vssver2.scc
SKCOMTesterV2/WindowsFormsApp1/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  vssver2.scc
SKCOMTesterV2/WindowsFormsApp1/Quote/: OOQuoteForm.Designer.cs  OOQuoteForm.cs  OSQuoteForm.Designer.cs  OSQuoteForm.cs  QuoteForm.Designer.cs  QuoteForm.cs  vssver2.scc
SKCOMTesterV2/郸菠COMじンㄏノ弧_SKCOMTesterV2/: 1.吏挂砞竚.docx  10.虫-戳匡醇紌虫.docx  11.虫-狡〆癠.docx  12.厨.docx  13.瓣ず厨基.docx  14.戳厨基.docx  15.匡厨基.docx  16.SGX_DMA盡絬.docx  2.旧凝.docx  3.祅.docx  4.虫非称ざ残.docx  5.虫-瓣ず靡ㄩ.docx  6.虫-靡ㄩ醇紌虫.docx  7.虫-瓣ず戳匡.docx  8.虫-瓣ず戳匡醇紌虫.docx  9.虫-戳匡.docx  vssver2.scc
cmdCapture(Clinet)/: socketClinet.cpp
cmdCapture(Server)/: socketServer.cpp  socketServer.h
cmdCaptureClinet/: Build_target.bat  CMakeLists.txt  socketClinet.cpp
cmdCaptureClinet/x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmdCaptureClinet.sln  cmdCaptureClinet.vcxproj  cmdCaptureClinet.vcxproj.filters
cmdCaptureClinet/x64/cmdCaptureClinet.dir/Release/: cmdCaptureClinet.exe.recipe
cmdCaptureClinet/x64/cmdCaptureClinet.dir/Release/cmdCaptureClinet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cmdCaptureClinet/x64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
cmdCaptureClinet/x64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
cmdCaptureClinet/x64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
cmdCaptureClinet/x64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
